<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">


    <!--Для основного экрана калькулятора выбран LinearLayout с вертикальным расположением элементов
    экрана и клавиатуры, сама клавиатура сделана при помощи  GridLayout, так как она является
    основным элементом калькулятора, она имеет четкую ассоциацию с гридом - одинаковые ряды и колонки,
    кнопок, кроме этого эта часть статична, то есть в рантайме контент не будет перестраиваться,
    все кнопки всегда будут на месте, что хорошо ложится в концепцию GridLayout-->

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="@dimen/display_height"
        android:background="@drawable/display_background"
        android:gravity="end"
        android:layout_margin="16dp"
        android:text=""
        android:textColor="@color/display_text"
        android:textSize="@dimen/display_text_size" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:useDefaultMargins="false"
        android:layout_margin="16dp">


        <Button
            android:id="@+id/keyClearAll"

            android:layout_width="@dimen/button_double_width"
            android:layout_height="@dimen/button_height"

            android:layout_columnSpan="2"

            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"

            android:text="@string/key_clear_all"
            android:textColor="@color/clear_all_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/keyBackSpace"

            android:layout_width="@dimen/button_double_width"
            android:layout_height="@dimen/button_height"

            android:layout_columnSpan="2"

            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"

            android:text="@string/key_back_space"
            android:textColor="@color/backspace_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />


        <Button
            android:id="@+id/key1"

            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_1"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/key2"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_2"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/key3"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_3"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/keyDivide"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_divide"
            android:textColor="@color/action_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/key4"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_4"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/key5"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_5"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/key6"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_6"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/keyMultiply"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_multiply"
            android:textColor="@color/action_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/key7"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_7"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/key8"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_8"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/key9"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_9"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/keyMinus"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_minus"
            android:textColor="@color/action_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/keyDot"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_dot"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/key0"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_0"
            android:textColor="@color/key_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/keyResult"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_result"
            android:textColor="@color/action_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/keyPlus"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/key_button_background"
            android:text="@string/key_plus"
            android:textColor="@color/action_button_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

    </GridLayout>

</LinearLayout>